Use geoserver 2.3